@@ -1,5 +1,5 @@
 <?php
-// $Id: views_test.module,v 1.1.4.7 2010-11-18 01:37:41 merlinofchaos Exp $
+// $Id: views_test.module,v 1.1.4.8 2011-01-04 20:29:56 merlinofchaos Exp $
 
 /**
  * Implements hook_perm().
@@ -30,4 +30,12 @@ function views_test_views_data() {
  */
 function views_test_views_plugins() {
   return variable_get('views_test_views_plugins', array());
+}
+
+function views_test_test_static_access_callback($access) {
+  return $access;
+}
+
+function views_test_test_dynamic_access_callback($access, $argument1, $argument2) {
+  return $access && $argument1 == variable_get('test_dynamic_access_argument1', NULL) && $argument2 == variable_get('test_dynamic_access_argument2', NULL);
 }
