@@ -1,5 +1,5 @@
 <?php
-// $Id: views.module,v 1.332.2.38 2011-01-01 22:49:45 merlinofchaos Exp $
+// $Id: views.module,v 1.332.2.39 2011-01-04 20:29:56 merlinofchaos Exp $
 /**
  * @file
  * Primarily Drupal hooks and global API functions to manipulate views.
@@ -553,6 +553,12 @@ function views_access() {
 
     list($callback, $arguments) = $arg;
     $arguments = $arguments ? $arguments : array();
+    // Bring dynamic arguments to the access callback.
+    foreach ($arguments as $key => $value) {
+      if (is_int($value) && isset($args[$value])) {
+        $arguments[$key] = $args[$value];
+      }
+    }
     if (function_exists($callback) && call_user_func_array($callback, $arguments)) {
       return TRUE;
     }
